crates/hir-ty/tests/snapshots/jls_switch__unsupported_selector.snap
---
source: crates/hir-ty/tests/jls_switch.rs
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    double m(double d) {
        switch (d) {
            default:
                return 0;
        }
    }
}

method m(double): double
  locals: l0: double
  exprs: e0: double | e1: <error> | e2: int
  diags: e0@4:16: switch-selector-type: Switch selector type 'double'
